[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "memory-management", "no-std"]
description = "A Two Level Segregated Fit (TLSF) allocator optimized for memory-constrained systems"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tlsf"
readme = "README.md"
repository = "https://github.com/japaric/tlsf"
version = "0.1.0-beta.1"

[dependencies.ufmt]
optional = true
version = "0.1.0"

[dev-dependencies]
nrf52832-hal = { version = "0.10.0", default-features = false, features = ["rt", "xxAA-package"] }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
spin = "0.5.2"
jlink_rtt = "0.2.0"
panic_rtt = "0.3.0"

[features]
FLI6 = []
FLI7 = []
FLI8 = []
FLI9 = []
FLI10 = []
FLI11 = []
FLI12 = []
FLI13 = []
FLI14 = []
FLI15 = []

[profile.release]
codegen-units = 1
lto = true